--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,16 @@ body {
   color: #e5e5e5;
 }
 
+.keyboard__key--matched {
+  background-color: #84ca33;
+  color: #35580d;
+}
+
+.keyboard__key--contains {
+  background-color: #ffdf57;
+  color: #83711e;
+}
+
 .keyboard__key--excluded:hover {
   background-color: #8d9699;
 }
